Внесены изменения в соотвествии с полученными ранее замечаниями