@@ -1,6 +1,7 @@
 package ru.yandex.practicum.filmorate.service;
 
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang.StringUtils;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
@@ -12,7 +13,7 @@ import java.util.*;
 @Slf4j
 public class FilmService {
     private int filmId = 0;
-    private LocalDate DEAD_LINE_DATE = LocalDate.of(1895, 12, 28);
+    private static final LocalDate DEAD_LINE_DATE = LocalDate.of(1895, 12, 28);
     private final Map<Integer, Film> films = new HashMap<>();
 
     public Collection<Film> findAll() {
@@ -24,20 +25,28 @@ public class FilmService {
         return filmId;
     }
 
-    private Film filmValidation(Film film) {
-        if (film.getName().isBlank() && film.getName().isEmpty()) {
+    private void filmValidation(Film film) {
+        if (StringUtils.isBlank(film.getName()) && StringUtils.isEmpty(film.getName())) {
             throw new ValidationException("Название фильма не может быть пустым");
+        }
+        if (StringUtils.isBlank(film.getDescription()) && StringUtils.isEmpty(film.getDescription())) {
+            throw new ValidationException("Описание фильма не может быть пустым, иметь значение null");
         }
         if (film.getDescription().length() > 200) {
             throw new ValidationException("Превышена максимальная длина описания — 200 символов");
         }
+        if (film.getReleaseDate() == null) {
+            throw new ValidationException("Дата релиза — не может быть null");
+        }
+
         if (film.getReleaseDate().isBefore(DEAD_LINE_DATE)) {
             throw new ValidationException("Дата релиза — раньше 28 декабря 1895 года");
         }
+
+        System.out.println("film.getDuration() = " + film.getDuration());
         if (film.getDuration() <= 0) {
             throw new ValidationException("Продолжительность фильма должна быть положительной");
         }
-        return film;
     }
 
     public Film createFilm(Film film) {
